feat: data generation

--- a/src/main/resources/assets/aviros/lang/en_us.json
+++ b/src/main/resources/assets/aviros/lang/en_us.json
@@ -2,7 +2,7 @@
   "itemGroup.aviros": "Aviros",
   "item.aviros.skyrite": "Skyrite",
   "item.aviros.skyrite_axe": "Skyrite Axe",
-  "item.aviros.skyrite_hoe": "Skyrite Sword",
+  "item.aviros.skyrite_hoe": "Skyrite Hoe",
   "item.aviros.skyrite_pickaxe": "Skyrite Pickaxe",
   "item.aviros.skyrite_shovel": "Skyrite Shovel",
   "item.aviros.skyrite_sword": "Skyrite Sword",
