feat: basic biome/dimension generation

--- a/src/main/resources/assets/aviros/lang/en_us.json
+++ b/src/main/resources/assets/aviros/lang/en_us.json
@@ -27,5 +27,6 @@
   "block.aviros.jynwood_trapdoor": "Jynwood Trapdoor",
   "block.aviros.jynwood_pressure_plate": "Jynwood Pressure Plate",
   "block.aviros.jynwood_leaves": "Jynwood Leaves",
-  "block.aviros.jynwood_sapling": "Jynwood Sapling"
+  "block.aviros.jynwood_sapling": "Jynwood Sapling",
+  "block.aviros.aviros_portal": "Aviros Portal"
 }
