--- a/src/main/resources/assets/aviros/lang/en_us.json
+++ b/src/main/resources/assets/aviros/lang/en_us.json
@@ -28,5 +28,6 @@
   "block.aviros.jynwood_pressure_plate": "Jynwood Pressure Plate",
   "block.aviros.jynwood_leaves": "Jynwood Leaves",
   "block.aviros.jynwood_sapling": "Jynwood Sapling",
-  "block.aviros.aviros_portal": "Aviros Portal"
+  "block.aviros.aviros_portal": "Aviros Portal",
+  "item.aviros.jynwood_rod": "Jynwood Rod"
 }
